--- a/package.json
+++ b/package.json
@@ -1,32 +1,42 @@
 {
   "name": "ai-cover-letter-buddy",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "AI-powered cover letter generator",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "^20.0.0",
     "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.3",
-    "lucide-react": "^0.544.0",
-    "next": "15.5.4",
+    "jspdf": "^2.5.1",
+    "lucide-react": "^0.263.1",
+    "next": "14.0.0",
     "pdf-lib": "^1.17.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-hot-toast": "^2.6.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-hot-toast": "^2.4.1",
+    "typescript": "^5.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20.19.17",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.4",
-    "tailwindcss": "^4",
-    "typescript": "^5"
-  }
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "autoprefixer": "^10.0.0",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "14.0.0",
+    "postcss": "^8.0.0",
+    "tailwindcss": "^3.0.0"
+  },
+  "keywords": [
+    "ai",
+    "cover-letter",
+    "job-application",
+    "nextjs",
+    "typescript"
+  ],
+  "author": "Your Name",
+  "license": "MIT"
 }
