--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
+    "@mistralai/mistralai": "^1.10.0",
     "@types/node": "^20.0.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
